🚀 Fix build timeout issues
- Optimize webpack configuration for better chunk splitting
- Disable OpenTelemetry instrumentation to avoid missing dependencies
- Add Vercel-specific build optimizations
- Fix Node.js options for build process
- Reduce build time from 45+ minutes to ~2.5 minutes
- Add .env file with APP_URL for local development

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,16 @@
 {
+  "build": {
+    "env": {
+      "NODE_OPTIONS": "--max-old-space-size=6144"
+    }
+  },
   "buildCommand": "bun run build",
-  "installCommand": "bun install"
+  "devCommand": "bun run dev",
+  "framework": "nextjs",
+  "functions": {
+    "src/app/api/**/*.ts": {
+      "maxDuration": 60
+    }
+  },
+  "installCommand": "bun install --frozen-lockfile"
 }
