--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,6 @@
       "maxDuration": 60
     }
   },
-  "installCommand": "bun install --frozen-lockfile"
+  "installCommand": "bun install --frozen-lockfile",
+  "rootDirectory": "."
 }
