🔧 Use explicit Vercel configuration to override project settings
- Use vercel.json version 2 with explicit builds configuration
- Point to package.json in root directory
- Override any project-level root directory settings
- Should force Vercel to use root directory instead of apps/web

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,15 @@
     }
   },
   "buildCommand": "bun run build",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next",
+      "config": {
+        "distDir": ".next"
+      }
+    }
+  ],
   "devCommand": "bun run dev",
   "framework": "nextjs",
   "functions": {
@@ -13,5 +22,11 @@
     }
   },
   "installCommand": "bun install --frozen-lockfile",
-  "rootDirectory": "."
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ],
+  "version": 2
 }
