--- a/package.json
+++ b/package.json
@@ -120,6 +120,8 @@
     "mdast-util-gfm-autolink-literal": "2.0.0"
   },
   "dependencies": {
+    "@ag-ui/client": "^0.0.40",
+    "@ag-ui/core": "^0.0.39",
     "@ant-design/icons": "^5.6.1",
     "@ant-design/pro-components": "^2.8.10",
     "@anthropic-ai/sdk": "^0.65.0",
